--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="content">
             <h1>In pursuit of the perfect cup</h1>
             <p>We create coffee experiences which elevate expectations</p>
-            <button>Explore Now</button>
+            <a href="https://www.youtube.com/" target="_blank" class="explore-button">Explore Now</a>
         </section>
         
         <section class="image">
