--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
             <div class="row g-16 align-items-center">
                 <div class="col-12 col-md-6">
                     <div class="mw-md-lg">
-                        <p class="mb-6 h5 fw-medium text-dark">In pursuit of the perfect cup</p>
-                        <h2 class="mb-14" style="letter-spacing: -1px;">We create coffee experiences which elevate
-                            expectations</h2>
+                        <p class="mb-6 h5 fw-medium text-dark">Discover harmony in a bowl</p>
+                        <h2 class="mb-14" style="letter-spacing: -1px;">Savor the flavor and freshness of our rice bowls, crafted to delight your palate and exceed expectations</h2>
                         <div class="row g-4">
                             <a class="btn mt-auto w-25 text-success-light shadow fs-12"
                                 style="background-color: var(--primaryo-color);" href="#about">About Us!</a>
