--- a/color-flipper/index.html
+++ b/color-flipper/index.html
@@ -15,7 +15,7 @@
                     <a href="index.html">simple</a>
                 </li>
                 <li>
-                    <a href="hex.html">hex</a>
+                    <a href="../index.html">back</a>
                 </li>
             </ul>
         </div>
