--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h2>yo haloo!</h2>
         <a href="mogalaku/index.html">mogalaku</a>
         <a href="color-flipper/index.html">color flipping</a>
+        <a href="coba-coba/index.html">coba-coba</a>
     </main>
 </body>
 </html>
