--- a/mogalaku/index.html
+++ b/mogalaku/index.html
@@ -26,7 +26,7 @@
         </a>
         <ul class="navbarun">
             <li>
-                <a href="" class="baten">Home</a>
+                <a href="../index.html" class="baten">Home</a>
             </li>
             <li>
                 <a href="" class="baten">About</a>
