--- a/index.html
+++ b/index.html
@@ -2,17 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>main</title>
-    <!-- css -->
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <title>GitHub Pages Hub</title>
 </head>
 <body>
-    <main>
-        <h2>yo haloo!</h2>
-        <a href="mogalaku/index.html">mogalaku</a>
-        <a href="color-flipper/index.html">color flipping</a>
-        <a href="coba-coba/index.html">coba-coba</a>
+    <nav class="container-fluid">
+        <ul>
+            <li><strong>GitHub Pages Hub</strong></li>
+        </ul>
+        <ul>
+            <li><a href="https://linktr.ee/ozrafi" target="_blank">Linktree</a></li>
+        </ul>
+    </nav>
+    <main class="container">
+        <h1>Selamat datang di github pages rfsyhb!</h1>
+        <p>Beberapa latihan yang telah blud lakukan :</p>
+        <ul>
+            <li><a href="mogalaku/index.html">mogalaku</a></li>
+            <li><a href="color-flipper/index.html">color flipping</a></li>
+            <li><a href="coba-coba/index.html">coba-coba</a></li>
+            <li><a href="dicoding/index.html">dicoding learning</a></li>
+        </ul>
     </main>
+    <footer class="container">
+        <small>&copy; 2024 rfsyhb</small>
+    </footer>
 </body>
 </html>
