--- a/dicoding/Halaman web pertama/index.html
+++ b/dicoding/Halaman web pertama/index.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+    <a href="../index.html" style="margin-left: 50%;">back</a><br>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">MDN HTML ref</a>
+    <p><strong>HTML</strong> merupakan <i>markup language</i> untuk membangun halaman web</p>
     <h1>Bandung</h1>
     <p>
         Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu
