--- a/dicoding/halaman-profil-bandung/index.html
+++ b/dicoding/halaman-profil-bandung/index.html
@@ -4,10 +4,18 @@
 <head>
     <meta charset="utf-8">
     <title>Halaman Profil Bandung</title>
+    <style>
+        a{
+            margin-left: 5px;
+        }
+    </style>
 </head>
 
 <body>
-    <a href="../index.html" style="margin-left: 50%;">back</a><br>
+    <div class="nav" style="display: flex; justify-content: center;">
+        <a href="../index.html">back</a><br>
+        <a href="list.html">latihan list</a><br>
+    </div>
     <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">MDN HTML ref</a>
     <p><strong>HTML</strong> merupakan <i>markup language</i> untuk membangun halaman web</p>
     <h1>Bandung</h1>
@@ -16,6 +24,11 @@
         kota provinsi tersebut.
     </p>
 
+    <ul>
+        <li>Sejarah</li>
+        <li>Geografis</li>
+        <li>Wisata</li>
+    </ul>
 
     <h2>Sejarah</h2>
     <p>
