--- a/dicoding/dasar-pemrograman-web/list.html
+++ b/dicoding/dasar-pemrograman-web/list.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <a href="index.html">back</a>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol">MDN Element OL</a>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul">MDN Element UL</a>
     <ul>
         <li>asep</li>
     </ul>
