--- a/dicoding/index.html
+++ b/dicoding/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <ul>
-            <li><a href="index.html">Kelas Belajar Dasar Pemrograman Web</a></li>
+            <li><a href="dasar-pemrograman-web/index.html">Kelas Belajar Dasar Pemrograman Web</a></li>
             <li><a href="index.html">Lorem Ipsum</a></li>
         </ul>
     </main>
