--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -23,7 +23,7 @@
         Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu
         kota provinsi tersebut.
     </p>
-
+    
     <ul>
         <li>Sejarah</li>
         <li>Geografis</li>
@@ -31,6 +31,7 @@
     </ul>
 
     <h2>Sejarah</h2>
+    <img src="assets/image/history.jpg" alt="Sejarah"/>
     <p>
         Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya
         sungai Citarum oleh lava Gunung Tangkuban Parahu yang lalu membentuk
@@ -53,6 +54,7 @@
 
 
     <h2>Geografis</h2>
+    <img src="assets/image/geografis.jpg" alt="Geografis"/>
     <p>
         Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi
         wilayahnya bagaikan sebuah mangkok raksasa, secara geografis kota ini
@@ -81,6 +83,7 @@
     </p>
 
     <h3>Farm House Lembang</h3>
+    <img src="assets/image/farm-house.jpg" alt="Farm house"/>
     <p>
         Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata
         yang tidak pernah sepi pengunjung. Selain karena letaknya strategis,
@@ -89,6 +92,7 @@
     </p>
 
     <h3>Observatorium Bosscha</h3>
+    <img src="assets/image/bosscha.jpg" alt="Bosscha"/>
     <p>
         Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt
         Bimasakti, Refraktor Bamberg, Cassegrain GOTO, dan Teleskop Surya.
