--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -14,7 +14,8 @@
 <body>
     <div class="nav" style="display: flex; justify-content: center;">
         <a href="../index.html">back</a><br>
-        <a href="list.html">latihan list</a><br>
+        <a href="list.html">latihan list</a>
+        <a href="image.html">latihan image</a>
     </div>
     <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">MDN HTML ref</a>
     <p><strong>HTML</strong> merupakan <i>markup language</i> untuk membangun halaman web</p>
