lat ift blockquote, figure, preformatting

--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -14,8 +14,9 @@
 <body>
     <div class="nav" style="display: flex; justify-content: center;">
         <a href="../index.html">back</a><br>
-        <a href="list.html">latihan list</a>
-        <a href="image.html">latihan image</a>
+        <a href="lat-list.html">lat list</a>
+        <a href="lat-image.html">lat image</a>
+        <a href="lat-inlineFormattingText.html">lat formatting</a>
     </div>
     <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">MDN HTML ref</a>
     <p><strong>HTML</strong> merupakan <i>markup language</i> untuk membangun halaman web</p>
