latihan semantik kecil kecilan

--- a/dicoding/dasar-pemrograman-web/lat-inlineFormattingText.html
+++ b/dicoding/dasar-pemrograman-web/lat-inlineFormattingText.html
@@ -79,6 +79,27 @@
         <figcaption>Sajak Putih oleh Charil Anwar</figcaption>
     </figure>
 
+    <!-- anchor, emphazie, dan important text -->
+    <p><a href="https://www.dicoding.com/">Website Dicoding</a></p>
+    <p><a href="https://www.dicoding.com/" target="_blank"><em>Website</em> Dicoding <strong>target blank</strong></a>
+    </p>
+
+    <!-- short quotation -->
+    <p>Sebelum pulang kerja, ia berkata kepadaku: <q>Maaf saya tidak bisa hadir dalam pertemuan nanti</q></p>
+    <p>Dia pun berkata, <q>Semantik itu apa?</q></p>
+    <blockquote>
+        <figure>
+            <p>
+                Dalam HTML, "semantik" mengacu pada penggunaan tag dan elemen yang secara akurat menggambarkan makna dan
+                struktur konten di dalam dokumen web. Tujuannya adalah untuk memastikan bahwa dokumen web tidak hanya
+                terlihat baik pada perangkat atau browser tertentu, tetapi juga dapat diakses dan dimengerti oleh mesin
+                pencari, pembaca layar (screen readers), dan perangkat lunak lain yang digunakan untuk menginterpretasi
+                dan
+                menampilkan informasi dari internet.
+            </p>
+            <figcaption>-ChatGPT, 2024</figcaption>
+        </figure>
+    </blockquote>
 </body>
 
 </html>
