penggunaan anchor dengan id

--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Halaman Profil Bandung</title>
     <style>
-        a{
+        a {
             margin-left: 5px;
         }
     </style>
@@ -25,15 +25,21 @@
         Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu
         kota provinsi tersebut.
     </p>
-    
+
     <ul>
-        <li>Sejarah</li>
-        <li>Geografis</li>
-        <li>Wisata</li>
+        <li>
+            <a href="#sejarah">Sejarah</a>
+        </li>
+        <li>
+            <a href="#geografis">Geografis</a>
+        </li>
+        <li>
+            <a href="#wisata">Wisata</a>
+        </li>
     </ul>
 
-    <h2>Sejarah</h2>
-    <img src="assets/image/history.jpg" alt="Sejarah"/>
+    <h2 id="sejarah">Sejarah<span style="font-size: medium;"><a href="#">back?</a></span></h2>
+    <img src="assets/image/history.jpg" alt="Sejarah" />
     <p>
         Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya
         sungai Citarum oleh lava Gunung Tangkuban Parahu yang lalu membentuk
@@ -55,8 +61,8 @@
     </p>
 
 
-    <h2>Geografis</h2>
-    <img src="assets/image/geografis.jpg" alt="Geografis"/>
+    <h2 id="geografis">Geografis<span style="font-size: medium;"><a href="#">back?</a></span></h2>
+    <img src="assets/image/geografis.jpg" alt="Geografis" />
     <p>
         Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi
         wilayahnya bagaikan sebuah mangkok raksasa, secara geografis kota ini
@@ -75,7 +81,7 @@
     </p>
 
 
-    <h2>Wisata</h2>
+    <h2 id="wisata">Wisata<span style="font-size: medium;"><a href="#">back?</a></span></h2>
     <p>
         Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan
         utama dalam menikmati liburan akhir pekan terutama dari masyarakat yang
@@ -85,7 +91,7 @@
     </p>
 
     <h3>Farm House Lembang</h3>
-    <img src="assets/image/farm-house.jpg" alt="Farm house"/>
+    <img src="assets/image/farm-house.jpg" alt="Farm house" />
     <p>
         Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata
         yang tidak pernah sepi pengunjung. Selain karena letaknya strategis,
@@ -94,7 +100,7 @@
     </p>
 
     <h3>Observatorium Bosscha</h3>
-    <img src="assets/image/bosscha.jpg" alt="Bosscha"/>
+    <img src="assets/image/bosscha.jpg" alt="Bosscha" />
     <p>
         Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt
         Bimasakti, Refraktor Bamberg, Cassegrain GOTO, dan Teleskop Surya.
