--- a/dicoding/dasar-pemrograman-web/lat-inlineFormattingText.html
+++ b/dicoding/dasar-pemrograman-web/lat-inlineFormattingText.html
@@ -9,7 +9,16 @@
 
 <body>
     <a href="index.html">back</a>
-
+    <ul>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes"><u>Global attributes by
+                    MDN</u></a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Common_questions/Web_mechanics/What_are_hyperlinks"><u>What
+                    are hyperlinks? By MDN</u></a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Common_questions/Web_mechanics/What_is_a_URL"><u>What
+                    is a URL? By MDN</u></a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a"><u>The Anchor element by MDN</u></a>
+        </li>
+    </ul>
     <!-- Long quotation -->
     <blockquote cite="https://id.wikipedia.org/wiki/Situs_web">
         <p>
