--- a/dicoding/dasar-pemrograman-web/lat-semantic.html
+++ b/dicoding/dasar-pemrograman-web/lat-semantic.html
@@ -5,6 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .shadowbox {
+            width: 15em;
+            border: 1px solid #333;
+            box-shadow: 8px 8px 5px #444;
+            padding: 8px 12px;
+            background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);
+        }
+
+        .phone {
+            font-weight: bold;
+        }
+
+        .bahan {
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
@@ -32,16 +49,33 @@
         </section>
 
 
-        <!-- pertanyaan -->
+        <!-- latihan div span -->
         <section>
-            <h2>&lt;article&gt;</h2>
-            <h2>&lt;aside&gt;</h2>
-            <h2>&lt;section&gt;</h2>
-            <h2>&lt;article&gt;</h2>
+            <h2>div span</h2>
+            <div class="shadowbox">
+                <p>
+                    Paragraf ini berada di dalam elemen div, tetapi ia akan ditampilkan sama seperti paragraf biasanya.
+                    Elemen ini lebih sering digunakan untuk mengelompokkan sebuah konten sehingga dapat memudahkan
+                    styling dengan menggunakan atribut class atau id.
+                </p>
+            </div>
+            <ul>
+                <li>Agil: <span class="phone">08123xxx</span></li>
+                <li>Widy: <span class="phone">08222xxx</span></li>
+                <li>Gilang: <span class="phone">08333xxx</span></li>
+            </ul>
+            <blockquote>
+                <p>
+                    Untuk membuat sebuah bakso kita membutuhkan <span class="bahan">daging sapi</span>,
+                    <span class="bahan">tepung tapioka</span>, <span class="bahan">bawang merah</span> dan
+                    <span class="bahan">bawang putih</span> kemudian satu sendok makan
+                    <span class="bahan">gula</span> dan <span class="bahan">garam</span>.
+                </p>
+            </blockquote>
         </section>
     </main>
-
-    <footer>
+    
+    <footer style="position: relative; top: 20px;">
         &copy; 2024, rfsyhb
     </footer>
 </body>
