--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -48,9 +48,9 @@
     </header>
 
     <main>
-        <div>
-            <article>
-                <h2 id="sejarah">Sejarah<span style="font-size: medium;"><a href="#">back?</a></span></h2>
+        <div id="content">
+            <article id="sejarah">
+                <h2>Sejarah<span style="font-size: medium;"><a href="#">back?</a></span></h2>
                 <img src="assets/image/history.jpg" alt="Sejarah" />
                 <p>
                     Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya
@@ -73,8 +73,8 @@
                 </p>
             </article>
 
-            <article>
-                <h2 id="geografis">Geografis<span style="font-size: medium;"><a href="#">back?</a></span></h2>
+            <article id="geografis">
+                <h2>Geografis<span style="font-size: medium;"><a href="#">back?</a></span></h2>
                 <img src="assets/image/geografis.jpg" alt="Geografis" />
                 <p>
                     Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi
@@ -94,8 +94,8 @@
                 </p>
             </article>
 
-            <article>
-                <h2 id="wisata">Wisata<span style="font-size: medium;"><a href="#">back?</a></span></h2>
+            <article id="wisata">
+                <h2>Wisata<span style="font-size: medium;"><a href="#">back?</a></span></h2>
                 <p>
                     Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan
                     utama dalam menikmati liburan akhir pekan terutama dari masyarakat yang
@@ -134,12 +134,14 @@
         </div>
 
         <aside>
-            <h2>Kota Bandung</h2>
-            <p>Kota Kembang Paris van Java</p>
-            <figure>
-                <img src="assets/image/Bandung_coa.png" alt="Bandung_coa" />
-                <figcaption>Lambang</figcaption>
-            </figure>
+            <article>
+                <h2>Kota Bandung</h2>
+                <p>Kota Kembang Paris van Java</p>
+                <figure>
+                    <img src="assets/image/Bandung_coa.png" alt="Bandung_coa" />
+                    <figcaption>Lambang</figcaption>
+                </figure>
+            </article>
         </aside>
     </main>
 
