--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -21,6 +21,7 @@
             <a href="lat-image.html">lat image</a>
             <a href="lat-inlineFormattingText.html">lat formatting</a>
             <a href="lat-semantic.html">lat semantic</a>
+            <a href="lat-table.html">lat table</a>
         </nav>
 
         <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">MDN HTML ref</a>
