latihan table, thead tbody

--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -22,6 +22,7 @@
             <a href="lat-inlineFormattingText.html">lat formatting</a>
             <a href="lat-semantic.html">lat semantic</a>
             <a href="lat-table.html">lat table</a>
+            <a href="lat-input.html">lat input</a>
         </nav>
 
         <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">MDN HTML ref</a>
@@ -136,12 +137,40 @@
 
         <aside>
             <article>
-                <h2>Kota Bandung</h2>
-                <p>Kota Kembang Paris van Java</p>
-                <figure>
-                    <img src="assets/image/Bandung_coa.png" alt="Bandung_coa" />
-                    <figcaption>Lambang</figcaption>
-                </figure>
+                <header>
+                    <h2>Kota Bandung</h2>
+                    <p>Kota Kembang Paris van Java</p>
+                    <figure>
+                        <img src="assets/image/Bandung_coa.png" alt="Bandung_coa" />
+                        <figcaption>Lambang</figcaption>
+                    </figure>
+                </header>
+
+                <section>
+                    <h3>Informasi Lainnya</h3>
+                    <table>
+                        <tr>
+                            <th>Negara</th>
+                            <td>Indonesia</td>
+                        </tr>
+                        <tr>
+                            <th>Hari jadi</th>
+                            <td>25 September 1810</td>
+                        </tr>
+                        <tr>
+                            <th>Luas Total</th>
+                            <td>167.67 km<sup>2</sup></td>
+                        </tr>
+                        <tr>
+                            <th>Bahasa Daerah</th>
+                            <td>Sunda</td>
+                        </tr>
+                        <tr>
+                            <th>Kode Telepon</th>
+                            <td>+62 22</td>
+                        </tr>
+                    </table>
+                </section>
             </article>
         </aside>
     </main>
