--- a/dicoding/dasar-pemrograman-web/lat-inlineFormattingText.html
+++ b/dicoding/dasar-pemrograman-web/lat-inlineFormattingText.html
@@ -109,6 +109,48 @@
             <figcaption>-ChatGPT, 2024</figcaption>
         </figure>
     </blockquote>
+
+    <!-- citation -->
+    <section>
+        <p>Informasi selengkapnya bisa Anda dapatkan di <cite><a href="https://dicoding.com">dicoding.com</a></cite>.
+        </p>
+    </section>
+
+    <!-- defining terms -->
+    <section>
+        <p><dfn>Website</dfn> merupakan halaman yang menampilkan informasi melalui teks atau gambar. Website dapat
+            diakses melalui internet dengan menggunakan browser.</p>
+    </section>
+
+    <!-- subscript & supercript -->
+    <section>
+        <p>
+            Sukrosa merupakan suatu disakarida yang dibentuk dari monomer-monomernya yang berupa unit glukosa dan
+            fruktosa, dengan rumus molekul C<sub>12</sub>H<sub>22</sub>O<sub>11</sub>.
+        </p>
+
+        <p>Salah satu persamaan paling umum dalam semua fisika adalah E=MC<sup>2</sup></p>
+    </section>
+
+    <!-- highlighted text -->
+    <p>
+        Ini adalah periode perang saudara. Pesawat ruang angkasa pemberontak, menyerang dari pangkalan
+        tersembunyi, telah memenangkan kemenangan pertama mereka melawan Kekaisaran Galactic yang jahat.
+        Selama pertempuran,
+        <mark>mata-mata Pemberontak berhasil mencuri rencana rahasia </mark>
+        ke senjata pamungkas Kekaisaran, STAR DEATH, stasiun ruang angkasa berlapis baja dengan kekuatan
+        yang cukup untuk menghancurkan seluruh planet.
+    </p>
+
+    <!-- line break -->
+    <section>
+        <p>
+            Dicoding Space,<br>
+            Jln. Batik Kumeli No. 50.<br>
+            Bandung.<br>
+            40123
+        </p>
+    </section>
 </body>
 
 </html>
