adding rule-set and linking external css to index.html

--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -10,6 +10,8 @@
             padding-right: 2px;
         }
     </style>
+    <!-- my own style -->
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 
 <body>
