--- a/dicoding/dasar-pemrograman-web/lat-css.html
+++ b/dicoding/dasar-pemrograman-web/lat-css.html
@@ -137,6 +137,28 @@
                 <span class="oblique">oblique</span>
             </p>
         </section>
+
+        <!-- ! text styling -->
+        <section class="text-styling">
+            <h1>Text Styling</h1>
+            <p class="ln2 indent25per">
+                Properti line-height digunakan untuk mengatur jarak minimal teks pada garis dasar ke garis
+                dalam menampilkannya pada halaman web.
+            </p>
+            <p class="ln200 alignright">
+                Properti line-height digunakan untuk mengatur jarak minimal teks pada garis dasar ke garis
+                dalam menampilkannya pada halaman web.
+            </p>
+            <p class="ln2em">
+                Properti line-height digunakan untuk mengatur jarak minimal teks pada garis dasar ke garis
+                dalam menampilkannya pada halaman web.
+            </p>
+            <a href="#" class="decoration-none">ini adalah link yang deco <span>none</span></a>
+            <p class="letter-spacing">Bandung, Kota metropolitan terbesar di Provinsi Jawa Barat.</p>
+            <p class="word-spacing">Bandung, Kota metropolitan terbesar di Provinsi Jawa Barat.</p>
+        </section>
+        <p class="shadow-four">Bandung, Kota metropolitan terbesar di Provinsi Jawa Barat.</p>
+        
     </main>
 </body>
 
