adding class profile, align center, & bold

--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -22,7 +22,8 @@
 <body>
     <header>
         <!-- Navigasi Antar Halaman dengan Styling Langsung pada <nav> -->
-        <nav style="display: flex; justify-content: center;">
+        <!-- <nav class="halaman-main" style="text-align: center;"> -->
+        <nav class="halaman-main" style="display: flex; justify-content: center;">
             <a href="../index.html">back</a>
             <a href="lat-list.html">lat list</a>
             <a href="lat-image.html">lat image</a>
@@ -143,7 +144,7 @@
         </div>
 
         <aside>
-            <article>
+            <article class="profile">
                 <header>
                     <h2>Kota Bandung</h2>
                     <p>Kota Kembang Paris van Java</p>
@@ -183,8 +184,7 @@
     </main>
 
     <footer>
-        <p>Belajar Dasar Pemrograman Web &#169; 2019, Dicoding Academy</p>
-        &copy; 2019, Dicoding Academy
+        <p>Belajar Dasar Pemrograman Web &copy; 2019, Dicoding Academy</p>
     </footer>
 </body>
 
