box model: sizing, border, padding, margin, display, box-shadow, radius

--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -31,6 +31,7 @@
             <a href="lat-semantic.html">lat semantic</a>
             <a href="lat-table.html">lat table</a>
             <a href="lat-input.html">lat input</a>
+            <a href="lat-css.html">lat css</a>
         </nav>
 
         <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">MDN HTML ref</a>
