--- a/dicoding/dasar-pemrograman-web/lat-css.html
+++ b/dicoding/dasar-pemrograman-web/lat-css.html
@@ -158,7 +158,64 @@
             <p class="word-spacing">Bandung, Kota metropolitan terbesar di Provinsi Jawa Barat.</p>
         </section>
         <p class="shadow-four">Bandung, Kota metropolitan terbesar di Provinsi Jawa Barat.</p>
-        
+
+        <div class="box">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus officiis perspiciatis quidem
+                ratione? Distinctio eos ex expedita iusto necessitatibus velit, veritatis. Aliquid, debitis
+                dignissimos in iusto magnam nulla sed tempora.
+            </p>
+        </div>
+
+        <div class="box-content">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate eius explicabo fuga
+                iusto magni minus odit praesentium, quasi quisquam quos repellat suscipit tempora tenetur?
+                Assumenda cum laborum officiis quos ratione.
+            </p>
+        </div>
+
+        <div class="box-overflow">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium amet corporis
+                cupiditate dignissimos error expedita explicabo facere facilis, ipsam itaque libero modi
+                officiis optio perspiciatis provident quam sequi voluptatem.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aut corporis facere harum
+                inventore iure, quisquam recusandae reprehenderit veritatis voluptatum. Ducimus
+                exercitationem illo nam sapiente suscipit, tenetur ullam ut voluptas!
+            </p>
+        </div>
+
+        <div class="halo">
+            coi
+        </div>
+
+        <div class="box-sizing-content"></div>
+        <p>
+            Elemen menerapkan <code>box-sizing: content-box;</code> Ukuran box secara keseluruhan akan
+            menjadi 260px lebar, 260px tinggi; 260 = 200 + 20 + 20 + 10 + 10
+        </p>
+        <br />
+        <div class="box-sizing-box"></div>
+        <p>
+            Elemen menerapkan <code>box-sizing: border-box;</code> Ukuran box akan tetap 200px lebar,
+            200px tinggi meskipun menerapkan padding dan border
+        </p>
+
+        <div>
+            <p class="coba-border"><span>halo wasap</span></p>
+        </div>
+
+        <div class="box-center">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ea,
+                id. Aliquid consectetur dolorum exercitationem ipsam, necessitatibus
+                nostrum pariatur sunt! Accusantium architecto at dolorem itaque quisquam
+                quod soluta sunt voluptatum.
+            </p>
+        </div>
     </main>
 </body>
 
