--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -62,7 +62,7 @@
         <div id="content">
             <article id="sejarah">
                 <h2>Sejarah<span style="font-size: medium;"><a href="#">back?</a></span></h2>
-                <img src="assets/image/history.jpg" alt="Sejarah" />
+                <img src="assets/image/history.jpg" alt="Sejarah" class="featured-image" />
                 <p>
                     Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya
                     sungai Citarum oleh lava Gunung Tangkuban Parahu yang lalu membentuk
@@ -86,7 +86,7 @@
 
             <article id="geografis">
                 <h2>Geografis<span style="font-size: medium;"><a href="#">back?</a></span></h2>
-                <img src="assets/image/geografis.jpg" alt="Geografis" />
+                <img src="assets/image/geografis.jpg" alt="Geografis" class="featured-image" />
                 <p>
                     Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi
                     wilayahnya bagaikan sebuah mangkok raksasa, secara geografis kota ini
@@ -117,7 +117,7 @@
 
                 <section>
                     <h3>Farm House Lembang</h3>
-                    <img src="assets/image/farm-house.jpg" alt="Farm house" />
+                    <img src="assets/image/farm-house.jpg" alt="Farm house" class="featured-image" />
                     <p>
                         Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata
                         yang tidak pernah sepi pengunjung. Selain karena letaknya strategis,
@@ -128,7 +128,7 @@
 
                 <section>
                     <h3>Observatorium Bosscha</h3>
-                    <img src="assets/image/bosscha.jpg" alt="Bosscha" />
+                    <img src="assets/image/bosscha.jpg" alt="Bosscha" class="featured-image" />
                     <p>
                         Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt
                         Bimasakti, Refraktor Bamberg, Cassegrain GOTO, dan Teleskop Surya.
