latihan menerapkan card style

--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -60,7 +60,7 @@
 
     <main>
         <div id="content">
-            <article id="sejarah">
+            <article id="sejarah" class="card">
                 <h2>Sejarah<span style="font-size: medium;"><a href="#">back?</a></span></h2>
                 <img src="assets/image/history.jpg" alt="Sejarah" class="featured-image" />
                 <p>
@@ -84,7 +84,7 @@
                 </p>
             </article>
 
-            <article id="geografis">
+            <article id="geografis" class="card">
                 <h2>Geografis<span style="font-size: medium;"><a href="#">back?</a></span></h2>
                 <img src="assets/image/geografis.jpg" alt="Geografis" class="featured-image" />
                 <p>
@@ -105,7 +105,7 @@
                 </p>
             </article>
 
-            <article id="wisata">
+            <article id="wisata" class="card">
                 <h2>Wisata<span style="font-size: medium;"><a href="#">back?</a></span></h2>
                 <p>
                     Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan
@@ -145,7 +145,7 @@
         </div>
 
         <aside>
-            <article class="profile">
+            <article class="profile" class="card">
                 <header>
                     <h2>Kota Bandung</h2>
                     <p>Kota Kembang Paris van Java</p>
