--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -20,22 +20,22 @@
 </head>
 
 <body>
-    <!-- Navigasi Antar Halaman dengan Styling Langsung pada <nav> -->
-    <!-- <nav class="halaman-main" style="text-align: center;"> -->
-    <div class="halaman-main" style="display: flex; justify-content: center;">
-        <a href="../index.html">back</a>
-        <a href="lat-list.html">lat list</a>
-        <a href="lat-image.html">lat image</a>
-        <a href="lat-inlineFormattingText.html">lat formatting</a>
-        <a href="lat-semantic.html">lat semantic</a>
-        <a href="lat-table.html">lat table</a>
-        <a href="lat-input.html">lat input</a>
-        <a href="lat-css.html">lat css</a>
-    </div>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">MDN HTML ref</a>
-    <p><strong>HTML</strong> merupakan <i>markup language</i> untuk membangun halaman web</p>
+    <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element -->
+    <!-- <p><strong>HTML</strong> merupakan <i>markup language</i> untuk membangun halaman web</p> -->
 
     <header>
+        <!-- Navigasi Antar Halaman dengan Styling Langsung pada <nav> -->
+        <!-- <nav class="halaman-main" style="text-align: center;"> -->
+        <div class="halaman-main" style="display: flex; justify-content: center;">
+            <a href="../index.html">back</a>
+            <a href="lat-list.html">lat list</a>
+            <a href="lat-image.html">lat image</a>
+            <a href="lat-inlineFormattingText.html">lat formatting</a>
+            <a href="lat-semantic.html">lat semantic</a>
+            <a href="lat-table.html">lat table</a>
+            <a href="lat-input.html">lat input</a>
+            <a href="lat-css.html">lat css</a>
+        </div>
         <div class="jumbotron">
             <h1>Bandung</h1>
             <p>
@@ -147,7 +147,7 @@
         </div>
 
         <aside>
-            <article class="profile" class="card">
+            <article class="profile card">
                 <header>
                     <h2>Kota Bandung</h2>
                     <p>Kota Kembang Paris van Java</p>
