--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -26,7 +26,8 @@
     <header>
         <!-- Navigasi Antar Halaman dengan Styling Langsung pada <nav> -->
         <!-- <nav class="halaman-main" style="text-align: center;"> -->
-        <div class="halaman-main" style="display: flex; justify-content: center;">
+        <div class="halaman-main" style="display: flex; justify-content: center; position: fixed; top: 0; width: 100%;">
+
             <a href="../index.html">back</a>
             <a href="lat-list.html">lat list</a>
             <a href="lat-image.html">lat image</a>
@@ -35,6 +36,7 @@
             <a href="lat-table.html">lat table</a>
             <a href="lat-input.html">lat input</a>
             <a href="lat-css.html">lat css</a>
+            <a href="lat-css-positioning.html">lat position</a>
         </div>
         <div class="jumbotron">
             <h1>Bandung</h1>
