--- a/dicoding/dasar-pemrograman-web/lat-inlineFormattingText.html
+++ b/dicoding/dasar-pemrograman-web/lat-inlineFormattingText.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-    <a href="index.html">back</a>
+    <header>
+        <nav
+            style="position: fixed; bottom: 50%; right: 25%; background-color: bisque; padding: 10px; box-sizing: border-box; width: 80px; text-align: center; box-shadow: 4px 4px 9px 0px rgba(0,0,0,0.75);">
+            <a href="index.html" style="text-decoration: none;">back</a>
+        </nav>
+    </header>
     <ul>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes"><u>Global attributes by
                     MDN</u></a></li>
