--- a/dicoding/dasar-pemrograman-web/lat-table.html
+++ b/dicoding/dasar-pemrograman-web/lat-table.html
@@ -9,16 +9,17 @@
 
 <body>
     <header>
-        <nav>
-            <a href="index.html">back</a>
+        <nav
+            style="position: fixed; bottom: 50%; right: 25%; background-color: bisque; padding: 10px; box-sizing: border-box; width: 80px; text-align: center; box-shadow: 4px 4px 9px 0px rgba(0,0,0,0.75);">
+            <a href="index.html" style="text-decoration: none;">back</a>
         </nav>
     </header>
     <main>
         <h1>Pemenang Piala Dunia Tiga Tahun Terakhir</h1>
-        
+
 
         <table>
-            <caption>id, headers, thead, tbody, tfoot, caption  </caption>
+            <caption>id, headers, thead, tbody, tfoot, caption </caption>
             <thead>
                 <tr>
                     <th>Tahun</th>
