--- a/dicoding/dasar-pemrograman-web/lat-input.html
+++ b/dicoding/dasar-pemrograman-web/lat-input.html
@@ -9,8 +9,9 @@
 
 <body>
     <header>
-        <nav>
-            <a href="index.html">back</a>
+        <nav
+            style="position: fixed; bottom: 50%; right: 25%; background-color: bisque; padding: 10px; box-sizing: border-box; width: 80px; text-align: center; box-shadow: 4px 4px 9px 0px rgba(0,0,0,0.75);">
+            <a href="index.html" style="text-decoration: none;">back</a>
         </nav>
         <p>tipe input elemen</p>
         <ul>
@@ -113,7 +114,8 @@
 
                 <button type="submit">Submit</button>
             </form>
-            <a href="https://developer.mozilla.org/en-US/docs/Learn/Forms/Sending_and_retrieving_form_data"><u>Sending form data oleh MDN</u></a>
+            <a href="https://developer.mozilla.org/en-US/docs/Learn/Forms/Sending_and_retrieving_form_data"><u>Sending
+                    form data oleh MDN</u></a>
         </section>
 
     </main>
