--- a/dicoding/dasar-pemrograman-web/lat-list.html
+++ b/dicoding/dasar-pemrograman-web/lat-list.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <a href="index.html">back</a>
+    <header>
+        <nav
+            style="position: fixed; bottom: 50%; right: 25%; background-color: bisque; padding: 10px; box-sizing: border-box; width: 80px; text-align: center; box-shadow: 4px 4px 9px 0px rgba(0,0,0,0.75);">
+            <a href="index.html" style="text-decoration: none;">back</a>
+        </nav>
+    </header>
     <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol">MDN Element OL</a>
     <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul">MDN Element UL</a>
     <ul>
@@ -20,4 +27,5 @@
         <li>coy</li>
     </ol>
 </body>
+
 </html>
