--- a/dicoding/dasar-pemrograman-web/lat-semantic.html
+++ b/dicoding/dasar-pemrograman-web/lat-semantic.html
@@ -26,11 +26,12 @@
 
 <body>
     <header>
-        <nav>
-            <a href="index.html">back</a>
+        <nav
+            style="position: fixed; bottom: 50%; right: 25%; background-color: bisque; padding: 10px; box-sizing: border-box; width: 80px; text-align: center; box-shadow: 4px 4px 9px 0px rgba(0,0,0,0.75);">
+            <a href="index.html" style="text-decoration: none;">back</a>
         </nav>
-        <h1>Latihan semantik ygy</h1>
     </header>
+    <h1>Latihan semantik ygy</h1>
 
     <main>
         <!-- pengertian non-semantic-->
@@ -74,7 +75,7 @@
             </blockquote>
         </section>
     </main>
-    
+
     <footer style="position: relative; top: 20px;">
         &copy; 2024, rfsyhb
     </footer>
