latihan flexbox parents n child

--- a/dicoding/dasar-pemrograman-web/index.html
+++ b/dicoding/dasar-pemrograman-web/index.html
@@ -38,6 +38,7 @@
             <a href="lat-input.html">lat input</a>
             <a href="lat-css.html">lat css</a>
             <a href="lat-css-positioning.html">lat position</a>
+            <a href="lat-css-flexbox.html">lat flexbox</a>
         </div>
         <div class="jumbotron">
             <h1>Bandung</h1>
