landing page dicoding set header

--- a/dicoding/index.html
+++ b/dicoding/index.html
@@ -14,6 +14,7 @@
     <main>
         <ul>
             <li><a href="dasar-pemrograman-web/index.html">Kelas Belajar Dasar Pemrograman Web</a></li>
+            <li><a href="landing-page-dicoding/index.html">Landing Page Dicoding</a></li>
             <li><a href="index.html">Lorem Ipsum</a></li>
         </ul>
     </main>
